Merged from the fix of expr parser.